syntax = "proto3";

package helloworld.v1;

import "google/api/annotations.proto";

option go_package = "helloworld/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "dev.kratos.api.helloworld.v1";
option java_outer_classname = "HelloworldProtoV1";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      get: "/helloworld/{name}"
    };
  }
}

message Error {
  int32 code = 1;
  string msg = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  oneof data {
      int32 age = 2;
      string msg = 3;
      Error error = 4;
  }
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
